--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -5,3 +5,15 @@
   align-items: center;
   justify-content: center;
 }
+
+.centeredBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  height: 100%;
+}
+
+img {
+  border-radius: 10px;
+}
