--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -1,4 +1,4 @@
-.layout {
+.layout, .centeredBox {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -6,12 +6,8 @@
   justify-content: center;
 }
 
-.centeredBox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 100%;
-  height: 100%;
+.fillWidth {
+  width: 100%;
 }
 
 img {
